# Zevaluator

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/dtfeval/: dtfeval.hpp
include/zeval/: zeval.hpp
test/: test.cpp
